styles/utils.css
.border-gradient {
  border: 10px solid;
  border-image-slice: 1;
  border-width: 1px;
  color: black;
}

.border-gradient-purple {
  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
}

.rich-text-content,
.markdown-content {
  h1,
  h2,
  h3,
  h4,
  h5,
  p {
    @apply dark:text-white;
  }

  p {
    margin-bottom: 1.7rem;
  }

  p:last-child {
    margin-bottom: 0;
  }
}

.markdown-image {
  border-radius: 0.5rem;
  margin-bottom: 2rem;
  overflow: hidden;
}

